--- a/.env
+++ b/.env
@@ -4,3 +4,5 @@ NEXT_PUBLIC_CLERK_SIGN_IN_URL=/sign-in
 NEXT_PUBLIC_CLERK_SIGN_UP_URL=/sign-up
 NEXT_PUBLIC_CLERK_AFTER_SIGN_IN_URL=/
 NEXT_PUBLIC_CLERK_AFTER_SIGN_UP_URL=/
+NEXT_PUBLIC_TINY_EDITOR_API_KEY=2799b9gk2hf8hje8k7kp1bri4nhcuw8jj5w4b49drfj6pg9a
+MONGO_DB_URI=mongodb+srv://adamg999:idFRuHnKqqP4laD2@gcluster.u5c6gy7.mongodb.net/?retryWrites=true&w=majority
