--- a/.env
+++ b/.env
@@ -1,5 +1,6 @@
 NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=pk_test_c2VsZWN0LXBpa2EtNTYuY2xlcmsuYWNjb3VudHMuZGV2JA
 CLERK_SECRET_KEY=sk_test_QJAAyhld7L8WN2mdIlunE2BaBcqCaT1ckgylPdycDp
+NEXT_CLERK_WEBHOOK_SECRET=whsec_2zmZpTwgtZJzEAxsH7hcmVyt6YyYKE7m
 NEXT_PUBLIC_CLERK_SIGN_IN_URL=/sign-in
 NEXT_PUBLIC_CLERK_SIGN_UP_URL=/sign-up
 NEXT_PUBLIC_CLERK_AFTER_SIGN_IN_URL=/
