--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "mongodb": "^6.1.0",
     "mongoose": "^7.6.3",
     "next": "latest",
+    "openai": "^4.15.4",
     "prismjs": "^1.29.0",
     "react": "latest",
     "react-dom": "latest",
