--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "next": "latest",
     "openai": "^4.15.4",
     "prismjs": "^1.29.0",
+    "query-string": "^8.1.0",
     "react": "latest",
     "react-dom": "latest",
     "react-hook-form": "^7.47.0",
